# tapify

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  docker-compose.yml
doc/: requirements.md
src/: lib.rs  main.rs  mpris.rs
tests/: dbus_test.rs  mock.rs  recording_test.rs
