[package]
name = "spotify-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zbus = { version = "5.15.0", features = ["tokio"] }
id3 = "1.16.2"
reqwest = { version = "0.12.12", features = ["blocking"] }
tempfile = "3.17.1"
anyhow = "1.0.95"
serde_json = "1.0.149"
